ajout du fichier gitignore

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Canvas HTML5</title>
+<title>Canvas HTML</title>
 <meta name="viewport" content="width=device-width">
 
 <!-- Feuille de styles génériques -->
