--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
 	</canvas>
 
 	
-
-
+<style>
+    
+  #mon_canvas{
+  height:800px; 
+  width: 100%;
+}  
+    
+</style>
+<script src="app.js"> </script>
 
 
 
